<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#d2d2d2"
    android:orientation="vertical">

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end|top"
        android:background="@drawable/ripple_effect"
        android:text="@string/history" />

    <Button
        android:id="@+id/clear_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:visibility="gone"
        android:text="@string/clear" />

    <GridLayout
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:columnCount="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display"
            android:layout_height="40dp"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            android:gravity="end"
            android:background="#dcdcdc"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/seven"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/nine" />

        <Button
            android:id="@+id/devide"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="buttonClick"
            android:text="@string/devide" />

        <Button
            android:id="@+id/four"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/six" />

        <Button
            android:id="@+id/subtraction"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="buttonClick"
            android:text="@string/minus" />

        <Button
            android:id="@+id/one"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/three" />

        <Button
            android:id="@+id/addition"
            android:layout_column="3"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="buttonClick"
            android:text="@string/plus" />

        <Button
            android:id="@+id/erase"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/clear" />

        <Button
            android:id="@+id/zero"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="numberClick"
            android:text="@string/zero" />

        <Button
            android:id="@+id/equally"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="equalsClick"
            android:text="@string/equally" />

        <Button
            android:id="@+id/multiply"
            android:layout_columnSpan="1"
            android:layout_margin="3dp"
            android:background="@drawable/ripple_effect"
            android:onClick="buttonClick"
            android:text="@string/multip" />
    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/clear_db"
        android:padding="10dp"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>